added ignore patterns for building

--- a/generic/.gitignore
+++ b/generic/.gitignore
@@ -4,3 +4,9 @@
 /teabox.ppm
 /teabox.wrl
 /teabox.xml
+/CMakeCache.txt
+/Makefile
+/cmake_install.cmake
+/tutorial-mb-generic-tracker
+/tutorial-mb-generic-tracker-full
+/CMakeFiles/
